--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -3,8 +3,8 @@
 {% block content %}
 <!--a completed task list that loops through task.name-->
 {% for post in posts %}
-  <h2>{{ post.post_title }}</h2>
-  <p>{{ post.post_body }}</p>
+  <h2>{{ post.title_post }}</h2>
+  <p>{{ post.blog_body }}</p>
 {% endfor %}
 
 {% endblock %}
