--- a/templates/blog.html
+++ b/templates/blog.html
@@ -13,8 +13,8 @@
     <!--the list bellow is what appends or returns the tasks list to html view-->
             <!--returns the name of object-->
         {% for post in posts %}
-        <h2><a href="/single-post?id={{ post.id }}">{{ post.title_post }}</a></h2>
-        <p>{{post.blog_body}}</p>
+        <h2><a href="/single-post?id={{ post.id }}">{{ post.post_title }}</a></h2>
+        <p>{{post.post_body}}</p>
         {% endfor %}
     {% endif %}
 
